Sonar analysis report